fix(celeritas): run JMH GL benchmarks on Windows (#188)